Add /package endpoint
